--- a/index.html
+++ b/index.html
@@ -40,6 +40,93 @@
   <!-- SECTION -->
   <main id="router-view">
     <!-- PRIMARY VIEWPORT -->
+
+    <div class="container-fluid">
+      <section id="question-container" class="row p-3">
+
+        <div class="col-12 text-center">
+          <p class="fs-1">Loading ...</p>
+        </div>
+
+      </section>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="requestFormModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+      aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="staticBackdropLabel">Trivia Select</h5>
+          </div>
+          <div class="modal-body">
+
+            <!-- Totally not stolen form 😅 -->
+            <form onsubmit="app.QuestionsController.getQuestions(event)">
+              <label for="amount">Number of Questions:</label>
+              <input type="number" name="amount" id="amount" class="form-control" min="1" max="50" value="10">
+
+              <br>
+
+              <label for="category">Select Category: </label>
+              <select name="category" id="category" class="form-control">
+                <option value="">Any Category</option>
+                <option value="9">General Knowledge</option>
+                <option value="10">Entertainment: Books</option>
+                <option value="11">Entertainment: Film</option>
+                <option value="12">Entertainment: Music</option>
+                <option value="13">Entertainment: Musicals &amp; Theatres</option>
+                <option value="14">Entertainment: Television</option>
+                <option value="15">Entertainment: Video Games</option>
+                <option value="16">Entertainment: Board Games</option>
+                <option value="17">Science &amp; Nature</option>
+                <option value="18">Science: Computers</option>
+                <option value="19">Science: Mathematics</option>
+                <option value="20">Mythology</option>
+                <option value="21">Sports</option>
+                <option value="22">Geography</option>
+                <option value="23">History</option>
+                <option value="24">Politics</option>
+                <option value="25">Art</option>
+                <option value="26">Celebrities</option>
+                <option value="27">Animals</option>
+                <option value="28">Vehicles</option>
+                <option value="29">Entertainment: Comics</option>
+                <option value="30">Science: Gadgets</option>
+                <option value="31">Entertainment: Japanese Anime &amp; Manga</option>
+                <option value="32">Entertainment: Cartoon &amp; Animations</option>
+              </select>
+
+              <br>
+
+              <label for="difficulty">Select Difficulty: </label>
+              <select name="difficulty" id="difficulty" class="form-control">
+                <option value="">Any Difficulty</option>
+                <option value="easy">Easy</option>
+                <option value="medium">Medium</option>
+                <option value="hard">Hard</option>
+              </select>
+
+              <br>
+
+              <label for="type">Select Type: </label>
+              <select name="type" id="type" class="form-control">&gt;
+                <option value="">Any Type</option>
+                <option value="multiple">Multiple Choice</option>
+                <option value="boolean">True / False</option>
+              </select>
+
+              <br>
+
+              <button class="btn btn-lg btn-primary btn-block" type="submit">Generate API
+                URL</button>
+            </form>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
   </main>
 
   <!-- SECTION -->
@@ -49,7 +136,7 @@
     </div>
   </footer>
 
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.23.0/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
