final style changes

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <title>Trivia-DB</title>
 </head>
 
-<body>
+<body class="bg-dark text-white">
   <!-- SECTION -->
-  <header>
-
+  <header class="text-center">
+    <p class="fs-1">Trivia Shack!</p>
   </header>
 
   <!-- SECTION -->
@@ -26,7 +26,7 @@
     <!-- PRIMARY VIEWPORT -->
 
     <div class="container-fluid">
-      <section id="question-container" class="row p-3">
+      <section id="question-container" class="row p-3 justify-content-center">
 
         <div class="col-12 text-center">
           <p class="fs-1">Loading ...</p>
@@ -39,7 +39,7 @@
     <div class="modal fade" id="requestFormModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
       aria-labelledby="staticBackdropLabel" aria-hidden="true">
       <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content bg-dark">
           <div class="modal-header">
             <h5 class="modal-title" id="staticBackdropLabel">Trivia Select</h5>
           </div>
