'Final' final style changes

--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
 
               <br>
 
-              <button class="btn btn-lg btn-primary btn-block" type="submit">Generate API
-                URL</button>
+              <button class="btn btn-lg btn-primary btn-block" type="submit">Make new questions</button>
             </form>
 
           </div>
